Fix: footer squashed on small screens

--- a/main.css
+++ b/main.css
@@ -202,6 +202,8 @@ nav {
 }
 
 footer {
+  padding-left: 1.5em;
+  padding-right: 1.5em;
   font-size: 0.8em;
   color: gray;
   text-align: center;
